--- a/composer.json
+++ b/composer.json
@@ -3,30 +3,20 @@
     "description": "Common package using in Inisiatif Zakat Indonesia",
     "license": "proprietary",
     "type": "library",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://repo.packagist.com/inisiatif/"
-        },
-        {
-            "packagist.org": false
-        }
-    ],
     "require": {
         "php": "~8.0.0|~8.1.0",
         "ext-json": "*",
-        "illuminate/database": "^9.19",
-        "illuminate/http": "^9.19",
-        "illuminate/routing": "^9.19",
-        "illuminate/support": "^9.19",
+        "inisiatif/contract": "^1.1",
         "laminas/laminas-hydrator": "^4.1",
         "ramsey/uuid": "^4.0",
         "spatie/data-transfer-object": "^3.7"
     },
     "require-dev": {
         "dg/bypass-finals": "^1.3",
+        "laravel/pint": "^1.0",
         "laravel/telescope": "^4.6",
-        "phpunit/phpunit": "^9.0"
+        "phpunit/phpunit": "^9.0",
+        "vimeo/psalm": "^5.13"
     },
     "autoload": {
         "psr-4": {
@@ -43,10 +33,12 @@
         "sort-packages": true,
         "optimize-autoloader": true
     },
+    "scripts": {
+        "analyse": "vendor/bin/psalm",
+        "test": "vendor/bin/phpunit",
+        "format": "vendor/bin/pint"
+    },
     "extra": {
-        "branch-alias": {
-            "dev-master": "1.1-dev"
-        },
         "laravel": {
             "dont-discover": [
                 "laravel/telescope"
