--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,11 +14,8 @@ jobs:
       matrix:
         os: [ ubuntu-latest ]
         php: [ 8.1, 8.0 ]
-        laravel: [ 9.*, 10.* ]
+        laravel: [ 9.* ]
         stability: [ prefer-lowest, prefer-stable ]
-        include:
-          - laravel: 9.*
-          - laravel: 10.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
