--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,12 @@
     "license": "proprietary",
     "type": "library",
     "require": {
-        "php": "~8.0.0|~8.1.0",
+        "php": "~8.1.0|~8.2.0",
         "ext-json": "*",
         "inisiatif/contract": "^1.1",
-        "laminas/laminas-hydrator": "^4.1",
-        "ramsey/uuid": "^4.0",
-        "spatie/data-transfer-object": "^3.7"
+        "ramsey/uuid": "^4.0"
     },
     "require-dev": {
-        "dg/bypass-finals": "^1.3",
         "laravel/pint": "^1.0",
         "laravel/telescope": "^4.6",
         "phpunit/phpunit": "^9.0",
