--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "proprietary",
     "type": "library",
     "require": {
-        "php": "~8.0.0|~8.1.0",
+        "php": "^8.1",
         "ext-json": "*",
         "inisiatif/contract": "^1.1",
         "laminas/laminas-hydrator": "^4.1",
