--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,9 +2,9 @@ name: Running phpunit
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, 1.x ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, 1.x ]
 
 jobs:
   test:
